# Mocha-Tabs

./: README.md  bun.lockb  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/window_manager/: config_manager.rs  mod.rs  window_commands.rs
